2011-02-24  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish msys-console.

	* msys/msys-console.xml: Update to 2.00b147-1.
	* msys/issue.log: Updated accordingly.

2011-02-01  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-binutils.

	* mingw32/mingw32-binutils.xml: Update to 2.21-3.
	* mingw32/issue.log: Updated accordingly.

2011-01-23  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-make.

	* mingw32/mingw32-make.xml: Update to 3.82-5.
	* mingw32/issue.log: Updated accordingly.

2011-01-12  Cesar Strauss  <cestrauss@gmail.com>

	Update & publish mingw32-gcc4.

	* mingw32/mingw32-gcc4.xml: Update to 4.5.2-1.
	* mingw32/issue.log: Updated accordingly.

2011-01-12  Cesar Strauss  <cestrauss@gmail.com>

	Fix incorrectly named tarball.

	* mingw32/mingw32-gcc4.xml (mingw32-gcc-objc): Change tarball name...
	(gcc-c++-4.5.0-1-mingw32-bin.tar.lzma): ...from this incorrect name...
	(gcc-objc-4.5.0-1-mingw32-bin.tar.lzma): ...to this.

2011-01-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct improperly named meta package reference.

	* msys/msys-base.xml (msys-tiny): Change package name reference...
	(msys-base-@YYYYMMDDNN@-msys-bin.meta): ...from this incorrect name...
	(msys-tiny-@YYYYMMDDNN@-msys-bin.meta): ...to this.

2011-01-07  Cesar Strauss  <cestrauss@gmail.com>

	Add a few missing entries to mingw32/issue.log.

	* mingw32/issue.log (mingw32-gcc3.xml): Add missing entry.
	(mingw32-gmp.xml): Ditto.
	(mingw32-mpc.xml): Ditto.
	(mingw32-mpfr.xml): Ditto.
	(mingw32-pthreads-w32.xml): Ditto.

>>>>>>> 1.54
2010-12-30  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-mintty.

	* msys/msys-mintty.xml: Update to 0.9.5-1.
	* msys/issue.log: Updated accordingly.

2010-12-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-mintty.

	* msys/msys-mintty.xml: Update to 0.9.4-1.
	* msys/issue.log: Updated accordingly.
